error
ej2.c: In function ‘main’:
ej2.c:56:12: error: ‘a’ undeclared (first use in this function)
        if (a=percolacuenta(red,n,per)) 
            ^
ej2.c:56:12: note: each undeclared identifier is reported only once for each function it appears in
ej2.c:60:14: error: ‘l’ undeclared (first use in this function)
         for (l=0;r<n*n;r++)
              ^
ej2.c:76:10: error: ‘res’ undeclared (first use in this function)
    free (res);
          ^
ej2.c:81:1: error: expected declaration or statement at end of input
 }
 ^
ej2.c:16:24: warning: unused variable ‘denominador’ [-Wunused-variable]
  float  prob,diff,norm,denominador,prom;
                        ^
ej2.c:16:19: warning: unused variable ‘norm’ [-Wunused-variable]
  float  prob,diff,norm,denominador,prom;
                   ^
ej2.c:15:30: warning: unused variable ‘conta’ [-Wunused-variable]
  int na,za,i,j,div,*red,n,z, conta,*per,r ;
                              ^
ej2.c:15:9: warning: variable ‘za’ set but not used [-Wunused-but-set-variable]
  int na,za,i,j,div,*red,n,z, conta,*per,r ;
         ^
ej2.c:81:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
progfinal.c: In function ‘diferenciare’:
progfinal.c:16:20: warning: unused variable ‘out’ [-Wunused-variable]
   float  prob,diff,out,k;
                    ^
progfinal.c: In function ‘percolacuenta’:
progfinal.c:742:8: error: ‘percolante’ undeclared (first use in this function)
      *(percolante+i)=1;
        ^
progfinal.c:742:8: note: each undeclared identifier is reported only once for each function it appears in
